[gd_scene load_steps=21 format=2]

[ext_resource path="res://GFX/Interface/PNG/metalPanel.png" type="Texture" id=1]
[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Interface/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Interface/button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Interface/button_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GFX/Interface/PNG/dotRed.png" type="Texture" id=8]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_redCorner.png" type="Texture" id=9]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_yellowCorner.png" type="Texture" id=10]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_blueCorner.png" type="Texture" id=11]
[ext_resource path="res://Interface/Numpad.gd" type="Script" id=12]
[ext_resource path="res://GFX/Interface/PNG/dotWhite.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = ExtResource( 4 )
Button/styles/normal = ExtResource( 6 )
Button/styles/pressed = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="Animation" id=7]
resource_name = "keypad_success"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ButtonContainer/GridContainer/StatusLight:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1.86607, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 8 ) ]
}

[node name="Numpad" type="Popup"]
visible = true
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
theme = SubResource( 3 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 15.0
margin_right = -10.0
margin_bottom = -15.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 100.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 15.0
margin_right = 265.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_left = 100.0
margin_top = 36.0
margin_right = 180.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 280.0
margin_bottom = 350.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 60.0
margin_right = 220.0
margin_bottom = 220.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3

[node name="Button1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 60.0
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 60.0
margin_right = 40.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 60.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 120.0
margin_top = 60.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 120.0
margin_right = 40.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 60.0
margin_top = 120.0
margin_right = 100.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 120.0
margin_top = 120.0
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "9"

[node name="StatusLight" type="TextureRect" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 180.0
margin_right = 40.0
margin_bottom = 220.0
texture = ExtResource( 8 )
expand = true

[node name="Button10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 60.0
margin_top = 180.0
margin_right = 100.0
margin_bottom = 220.0
rect_min_size = Vector2( 40, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ButtonOK" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 120.0
margin_top = 180.0
margin_right = 160.0
margin_bottom = 220.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/keypad_success = SubResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
